Added script link in head section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Document</title>
+        <title>Rock Paper Scissor</title>
+        <script src="script.js"></script>
     </head>
     <body>
         
