--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock Paper Scissor</title>
-        <script src="script.js"></script>
+        <script src="script.js" defer></script>
     </head>
     <body>
-        
+        <div class="container">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+        <div id="result"></div>
     </body>
 </html>
